# mongo-utils

./: .gitignore  CMakeLists.txt  README.md
src/: .gitignore  CMakeLists.txt  Client.cpp  Client.hpp  client-logging.cpp  connect.cpp  emptyshard.cpp  moveshard.cpp  removeshard.cpp  status.cpp
src/moveshard/: .gitignore  CMakeLists.txt  Client.cpp  Client.hpp  test.cpp
